--- a/Week 2_LAB 1_Flashcards/Base.lproj/LaunchScreen.storyboard
+++ b/Week 2_LAB 1_Flashcards/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SplashLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bF4-iL-6Py">
-                                <rect key="frame" x="-79" y="214" width="570" height="302"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bF4-iL-6Py">
+                                <rect key="frame" x="7" y="248" width="400" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="2gi-xq-xqA"/>
+                                    <constraint firstAttribute="height" constant="400" id="PY4-g8-mUe"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bF4-iL-6Py" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="DNu-ou-guj"/>
+                            <constraint firstItem="bF4-iL-6Py" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Fgi-oG-Vm2"/>
+                            <constraint firstItem="bF4-iL-6Py" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="25:56" id="hfy-38-oHg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
